--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
     "axios": "^1.11.0",
+    "chart.js": "^4.5.1",
     "dayjs": "^1.11.18",
     "framer-motion": "^12.23.12",
     "react": "^19.1.1",
